# flutter_embedder

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cargokit_options.yaml  pubspec.yaml
.github/workflows/: precompile.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/assets/: tokenizer.json
example/integration_test/: simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_embedding.podspec
lib/: flutter_embedder.dart  flutter_embedding.dart
lib/src/embeddings/: bge.dart  gemma.dart  jina_v3.dart  minilm.dart  model_manager.dart  qwen3.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
linux/: CMakeLists.txt
macos/: flutter_embedding.podspec
rust/: .gitignore  Cargo.toml  cargokit.yaml
rust/src/: frb_generated.rs
rust/src/api/: embeddings.rs  mod.rs  ort.rs  tokenizer.rs  utils.rs
rust/src/api/embeddings/: bge.rs  gemma.rs  jina_v3.rs  minilm.rs  qwen3.rs
rust/tests/: bge_embedding.rs  config.rs  gemma_embedding.rs  minilm_embedding.rs  qwen_embedding.rs  tokenizer_smoke.rs
windows/: CMakeLists.txt
(+13 files in other folders)
